# ChallengePlatform

./: .algokit.toml  .eslintrc.js  .gitignore  README.md  SETUP.md  algokit.toml  deployment.json  docker-compose.yml  env.example  jest.config.js  package.json  pyproject.toml  tsconfig.json
backend/node-services/: Dockerfile  package.json
backend/node-services/src/: index.ts
backend/python-api/: database.py  main.py  mock_data.py  models.py  requirements.txt  schemas.py
backend/python-api/services/: __init__.py  challenge_service.py  chat_service.py  contract_service.py  ranking_service.py  task_service.py  user_service.py  websocket_manager.py
contracts/: HabitTrackerChallenge.algo.ts  README.md  __init__.py  build.py  challenge_contract.py  contract_types.py  deploy.py  deploy.ts  errors.py  real_deploy.py  simple_deploy.py  test_contract.py
contracts/api/: server.ts
contracts/client/: HabitTrackerClient.ts
contracts/smart_contracts/challenge_platform/: __init__.py  errors.py
contracts/types/: index.ts
frontend/: Dockerfile  env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChallengeCard.tsx  LoadingSpinner.tsx  Navbar.tsx  WalletConnect.tsx
frontend/src/contexts/: AuthContext.tsx  WebSocketContext.tsx
shared/: types.ts
smart_contracts/: build.py  compile_real_contract.py  deploy.py  deploy_real_contract.py  deployment.json  simple_challenge_contract.py
tests/: setup.ts
tests/contracts/: HabitTrackerChallenge.test.ts
(+16 files in other folders)
