[build-system]
requires = ["algopy>=0.4.0"]
build-backend = "algopy.build"

[tool.poetry]
name = "challenge-platform-contracts"
version = "0.1.0"
description = "Challenge Platform Smart Contracts for Algorand"
authors = ["Challenge Platform Team <team@challengeplatform.com>"]
readme = "README.md"
package-mode = false

[project]
name = "challenge-platform-contracts"
version = "0.1.0"
description = "Challenge Platform Smart Contracts for Algorand"
authors = [
    {name = "Challenge Platform Team", email = "team@challengeplatform.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "algopy>=0.4.0",
    "algosdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.algopy]
# Algopy configuration
target = "teal"
optimization_level = 1

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
